--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -5,13 +5,13 @@
         <h3>List your Property</h3>
       </div>
       <div class="card-body">
-        <form (ngSubmit)="onSubmit()" #Form="ngForm">
+        <form (ngSubmit)='onSubmit()' [formGroup] ="addPropertyForm">
           <div class="tab-panel">
             <tabset class="member-tabset" #formTabs>
-              <tab heading="Basic info" ngModelGroup="BasicInfo" #BasicInfo="ngModelGroup">
+              <tab heading="Basic info"  formGroupName="BasicInfo">
                 <div class="form-group col-12">
                   <p>I want to</p>
-                  <div class="btn-group" btnRadioGroup ngModel name="SellRent" required>
+                  <div class="btn-group" btnRadioGroup formControlName="SellRent">
                     <label
                       class="btn btn-outline-primary mr-2"
                       btnRadio="1"
@@ -27,42 +27,53 @@
                       >Rent</label
                     >
                   </div>
+                  <div class="error-block" *ngIf="SellRent.invalid && nextClicked">
+                    Please select sell or rent
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
                   <p>BHK</p>
                   <div class="btn-group" btnRadioGroup
+                  formControlName="BHK"
                   [(ngModel)]="propertyView.BHK" name ="BHK">
                     <label
                       *ngFor="let bhk of [1, 2, 3, 4]"
                       class="btn btn-outline-primary mr-2"
                       [btnRadio]="bhk"
                       role="button"
-                      name="SellRent"
-                      >{{ bhk }}</label
-                    >
+                      name="BHK"
+                      >{{ bhk }}</label>
+
+                  </div>
+                  <div class="error-block" *ngIf="BHK.invalid && nextClicked">
+                    Please select BHK
                   </div>
                 </div>
 
                 <div class="form-group col-12">
                   <p>Property Type</p>
-                  <div class="btn-group" btnRadioGroup name='propType'
-                  [(ngModel)]="propertyView.Ptype">
+                  <div class="btn-group" btnRadioGroup formControlName='PType'
+                  [(ngModel)]="propertyView.PType"
+                  >
                     <label
                       *ngFor="let ptype of propertyTypes"
                       class="btn btn-outline-primary mr-2"
                       [btnRadio]="ptype"
                       role="button"
-                      name="SellRent"
+                      name="PropType"
                       >{{ ptype }}</label
                     >
+                  </div>
+                  <div class="error-block" *ngIf="PType.invalid && nextClicked">
+                    Please select property type
                   </div>
                 </div>
 
                 <div class="form-group col-12">
                   <p>Furnishing type</p>
-                  <div class="btn-group" btnRadioGroup
-                  [(ngModel)]="propertyView.Ftype"name ="Ftype">
+                  <div class="btn-group" btnRadioGroup formControlName="FType"
+                  [(ngModel)]="propertyView.FType">
                     <label
                       *ngFor="let ftype of furnishTypes"
                       class="btn btn-outline-primary mr-2"
@@ -72,6 +83,9 @@
                       >{{ ftype }}</label
                     >
                   </div>
+                  <div class="error-block" *ngIf="FType.invalid && nextClicked">
+                    Please select furnishing type
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
@@ -79,29 +93,26 @@
                   <input
                     type="text"
                     class="form-control"
-                    #propName="ngModel"
-                    ngModel name="Name"
+                    ngModel
+                    formControlName="Name"
                     required
                     minlength="5"
                     [(ngModel)]="propertyView.Name"
                   />
-                  <span
-                    *ngIf="!propName.valid && propName.touched"
-                    class="error-block"
-                  >
-                    <span *ngIf="propName.errors?.required"
-                      >Please Provide Name</span
-                    >
-                    <span *ngIf="propName.errors?.minlength"
-                      >Name must be over 5 characters</span
-                    >
-                  </span>
+
+                  <div class="error-block" *ngIf="Name.invalid && nextClicked">
+                    Please select building, society or project name
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
                   <label for="type"> City</label>
                   <input type="text" class="form-control"
-                  [(ngModel)]="propertyView.City" name="City" />
+                  formControlName="City"
+                  [(ngModel)]="propertyView.City" name="City"/>
+                  <div class="error-block" *ngIf="City.invalid && nextClicked">
+                    Please select City
+                  </div>
                 </div>
 
 
@@ -109,128 +120,161 @@
                   <button
                     type="button"
                     class="btn btn-primary btn-block"
-                    (click)="selectTab(1)"
-                    [disabled]="!BasicInfo.valid"
+                    (click)="selectTab(1, BasicInfo.valid)"
                   >
                     Next
                   </button>
                 </div>
               </tab>
-              <tab heading="Pricing and Area">
+              <tab heading="Pricing and Area" formGroupName="PriceInfo">
                 <div class="form-group col-12">
                   <div class="form-group col-12">
-                    <label>Price (in USD)</label>
-                    <input type="text" class="form-control" name ='price'
+                    <label *ngIf="SellRent.value==1">Price (in USD)</label>
+                    <label *ngIf="SellRent.value==2">Rent (in USD)</label>
+                    <input type="text" class="form-control" formControlName ='Price'
                     [(ngModel)]="propertyView.Price" />
+                    <div class="error-block" *ngIf="Price.invalid &&(nextClicked || Price.touched)">
+                      Please select
+                      <span *ngIf="SellRent.value==1;else ShowRent">price</span>
+                      <ng-template #ShowRent>rent</ng-template>
+                    </div>
+
                   </div>
 
+                  <div *ngIf="SellRent.value==2">
                   <div class="form-group col-12">
                     <label>Security (in USD)</label>
-                    <input type="text" class="form-control" />
+                    <input type="text"
+                    formControlName="Security"
+                    class="form-control" />
                   </div>
 
                   <div class="form-group col-12">
                     <label>Maintenance (in USD)</label>
-                    <input type="text" class="form-control" />
+                    <input type="text"
+                    formControlName="Maintenance"
+                    class="form-control" />
+                  </div>
                   </div>
 
                   <div class="form-group col-12">
                     <label>Built Area (in Sqr Feet)</label>
-                    <input type="text" class="form-control"
-                    [(ngModel)]="propertyView.BuiltArea" name="BuiltArea" />
+                    <input type="text"
+                    class="form-control"
+                    formControlName="BuiltArea"
+                    [(ngModel)]="propertyView.BuiltArea" />
+                    <div class="error-block"
+                    *ngIf="BuiltArea.invalid && nextClicked">
+                      Please select built up area
+                    </div>
                   </div>
 
                   <div class="form-group col-12">
                     <label>Carpet Area(in Sqr Feet)</label>
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control"
+                    formControlName="CarpetArea" />
                   </div>
 
                   <div class="form-group col-12">
                     <button
                       type="button"
                       class="btn btn-primary btn-block"
-                      (click)="selectTab(0)"
+                      (click)="selectTab(0,PriceInfo.valid)"
                     >
                       Back
                     </button>
                     <button
                       type="button"
                       class="btn btn-primary btn-block"
-                      (click)="selectTab(2)"
+                      (click)="selectTab(2,PriceInfo.valid)"
                     >
                       Next
                     </button>
                   </div>
                 </div>
               </tab>
-              <tab heading="Address">
+              <tab heading="Address" formGroupName="AddressInfo">
                 <div class="form-group col-12">
                   <div class="form-group col-12">
                     <label>Floor</label>
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control"
+                    formControlName="FloorNo"/>
                   </div>
 
                   <div class="form-group col-12">
                     <label>Total Floor</label>
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control"
+                    formControlName="TotalFloor" />
                   </div>
 
                   <div class="form-group col-12">
                     <label>Address</label>
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control"
+                    formControlName="Address" />
+                    <div class="error-block"
+                    *ngIf="Address.invalid && (nextClicked || Address.touched)">
+                      Please select address
+                    </div>
                   </div>
 
                   <div class="form-group col-12">
                     <label>Landmark</label>
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control"
+                    formControlName="LandMark" />
                   </div>
 
                   <div class="form-group col-12">
                     <button
                       type="button"
                       class="btn btn-primary btn-block"
-                      (click)="selectTab(1)"
+                      (click)="selectTab(2,AddressInfo.valid)"
                     >
                       Back
                     </button>
                     <button
                       type="button"
                       class="btn btn-primary btn-block"
-                      (click)="selectTab(3)"
+                      (click)="selectTab(3,AddressInfo.valid)"
                     >
                       Next
                     </button>
                   </div>
                 </div>
               </tab>
-              <tab heading="Other Details">
+              <tab heading="Other Details" formGroupName="OtherInfo">
                 <div class="form-group col-12">
                   <p>Ready to Move</p>
-                  <div class="btn-group" btnRadioGroup>
+                  <div class="btn-group" btnRadioGroup formControlName="RTM">
                     <label
                       class="btn btn-outline-primary mr-2"
                       btnRadio="1"
+                      tabindex="0"
                       role="button"
-                      name="SellRent"
+                      name="RTM"
                       >Yes</label
                     >
                     <label
                       class="btn btn-outline-primary"
                       btnRadio="2"
+                      tabindex="0"
                       role="button"
-                      name="SellRent"
+                      name="RTM"
                       >No</label
                     >
                   </div>
+                  <div class="error-block" *ngIf="RTM.invalid && nextClicked">
+                    Please select ready to move
+                  </div>
                 </div>
 
-                <div class="form-group col-3">
+                <div *ngIf="RTM.value==2" class="form-group col-6">
                   <label>Possession/Avaialble From</label>
 
                   <input
                     type="text"
                     placeholder="Datepicker"
                     class="form-control"
+                    formGroupName="PossessionOn"
                     bsDatepicker
                     [bsConfig]="{
                       containerClass: 'theme-dark-blue',
@@ -239,9 +283,10 @@
                   />
                 </div>
 
-                <div class="form-group col-12">
+                <div *ngIf="RTM.value==1" class="form-group col-3">
                   <label>Age of Property</label>
-                  <input type="text" class="form-control" />
+                  <input type="text" class="form-control"
+                  formControlName="AOP" />
                 </div>
 
                 <div class="form-group col-12">
